[project]
name = "ip-knowledge-base"
version = "0.1.0"
description = ""
authors = [
    {name = "lubie-koty",email = "weronika.zelazko@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "intervaltree (>=3.1.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
